# zbx-mcp-server

./: .gitignore  CLAUDE.md  README.md  TOOL_USAGE_GUIDE.md  config.json  mcp-config.json  pyproject.toml  remote_host_testing_manual.md  requirements.txt  run.py  test_logging.py
tests/: conftest.py  test_config_only.py  test_integration.py  test_main.py  test_models.py  test_multi_server.py  test_runner.py  test_server.py  test_zabbix_client.py
zbx_mcp_server/: __init__.py  config.py  logging_config.py  main.py  models.py  server.py  server_manager.py  zabbix_client.py
zbx_mcp_server/docs/: distributed_setup_examples.md  zabbix-mcp-tools-prd.md
