[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbx-mcp-server"
version = "0.1.0"
description = "Minimal MCP server with HTTP protocol"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
zbx-mcp-server = "zbx_mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zbx_mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=zbx_mcp_server",
    "--cov-report=term-missing"
]
asyncio_mode = "auto"